fix(config): habilitar detecção de profiles e resolver injeção em ApiConstants
- Adicionada annotation @ConfigurationPropertiesScan em RslSystemApiApplication
- Corrigido Spring Boot para detectar automaticamente os environment profiles
- Habilitado scan automático de classes @ConfigurationProperties
- Resolvido problemas de integração de profiles com ApiConstants e SecurityConfig
- Garantido que ResponseWrapper funcione sem erros de injeção
- Verificados profiles dev/prod, configuração de CORS e datasource