@@ -1,6 +1,5 @@
 package com.rslsystem.api.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -18,62 +17,40 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
-    @Value("${cors.allowed-origins}")
-    private List<String> allowedOrigins;
+    private final CorsProperties corsProperties;
+
+    public SecurityConfig(CorsProperties corsProperties) {
+        this.corsProperties = corsProperties;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // Desabilitar CSRF (API REST não precisa)
-                .csrf(csrf -> csrf.disable())
-                // Configurar CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // Configurar autorização de endpoints
-                .authorizeHttpRequests(auth -> auth
-                        // Endpoints públicos (sem autenticação)
-                        // NOTA: Configuração específica para JWT (descomentará quando implementar)
-                        //.requestMatchers("/api/health", "/api/info", "/api/test/**").permitAll()
-                        .requestMatchers("/actuator/health").permitAll()
-                        // TEMPORÁRIO: Por enquanto liberar tudo para desenvolvimento
-                        .requestMatchers("/api/**").permitAll()
-                        // Swagger/OpenAPI (ambiente dev)
-                        .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-                        // Todos os outros endpoints precisam de autenticação (futuro JWT)
-                        .anyRequest().authenticated()
-                )
-                // Configurar sessão (stateless para APIs REST)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-                // Desabilitar formulário de login padrão
-                .formLogin(form -> form.disable())
-                .httpBasic(basic -> basic.disable());
+            .csrf(csrf -> csrf.disable())
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/actuator/health").permitAll()
+                .requestMatchers("/api/**").permitAll()
+                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                .anyRequest().authenticated()
+            )
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .formLogin(form -> form.disable())
+            .httpBasic(basic -> basic.disable());
 
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Usar origens dos profiles
-        configuration.setAllowedOrigins(allowedOrigins);
-        
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
-        ));
-        
-        // Headers permitidos
-        configuration.setAllowedHeaders(List.of("*"));
-        
-        // Permitir credentials (cookies, authorization headers)
-        configuration.setAllowCredentials(true);
-        
-        // Aplicar configuração para todas as rotas /api/**
+        CorsConfiguration cfg = new CorsConfiguration();
+        cfg.setAllowedOrigins(corsProperties.getAllowedOrigins());
+        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
+        cfg.setAllowedHeaders(List.of("*"));
+        cfg.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
-        
+        source.registerCorsConfiguration("/api/**", cfg);
         return source;
     }
 }
